{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "9565b8cb-f9dc-48b3-912d-955731aa599b",
            "actions": [
                {
                    "name": "HoldToMoveCam",
                    "type": "Button",
                    "id": "b70e7dfd-c053-4245-a152-0341d3b3d57e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamMovement-ShootPower",
                    "type": "Value",
                    "id": "f85a6b17-375d-4b5d-967c-2192079250ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CamZoom",
                    "type": "Value",
                    "id": "fd884fe5-d707-481d-9691-e3481050ce8f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HoldToShoot",
                    "type": "Button",
                    "id": "8f085267-0989-4858-8cc4-42418a681a08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7e42cd79-46e5-4ab9-8827-ead5b91b2028",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldToMoveCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a32c492a-19aa-42f7-84b2-948cd0a4f412",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "CamMovement-ShootPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1c5cf1c-ef94-4fa0-af5f-a73992ab3c1a",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f9a9e0e-96f3-494e-849e-de8bf05fdb94",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldToShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}